# SPMpy_public

./: LICENSE  README.md  pyproject.toml
miniforge (mamba) installation guide/: Miniforge_DataAnalysis_Setup_2025-1029_XW_comment.docx  miniforge installation 2025 0820- Jewook .pptx
notebooks/: 2D_data_summary_sxm_v2026_0109.py  TwoDdata_summary_sxm_v2026_0108.ipynb  TwoDdata_summary_sxm_v2026_0108.py  TwoDdata_summary_sxm_v2026_0109.ipynb  quickstart_spmpy_v0_1.ipynb  quickstart_spmpy_v0_1.py
spmpy/fft/: TwoDfft_xrft.ipynb  TwoDfft_xrft.py  twoDfft_xr_wit_ifft.ipynb  twoDfft_xr_wit_ifft.py  twoDfft_xrft.ipynb  twoDfft_xrft.py
spmpy/io/: spmpy_io_library_v0_1_1.ipynb  spmpy_io_library_v0_1_1.py  spmpy_io_library_v0_1_2.ipynb  spmpy_io_library_v0_1_2.py  ui_select_folder.py
spmpy/notebooks/: env_check_v.2025Dec_30_revised.ipynb  spmpy_quickstart_v0.1_2025Dec30.ipynb  spmpy_quickstart_v0.1_2025Dec30.py  spmpy_quickstart_v0.1_2025Dec30_revised.ipynb
spmpy/preprocess/: interpolate2D_xr.ipynb  interpolate2D_xr.py  plane_fit_preprocess.ipynb  plane_fit_preprocess.py  plane_fit_xr.ipynb  plane_fit_xr.py  plateau_tilt_xr.ipynb  plateau_tilt_xr.py
